# Rillsy

./: .gitignore  README.md  bot.py  pyproject.toml  requirements.txt
src/plugins/nonebot-plugin-ithome-rss/: __init__.py
src/plugins/nonebot_plugin_b23/: __init__.py
src/plugins/rillsy_plugin_bili_link/: __init__.py
src/plugins/rillsy_plugin_ithome_link/: __init__.py
src/plugins/rillsy_plugin_ncm_link/: LICENSE  __init__.py
src/plugins/rillsy_plugin_test/: __init__.py
