[project]
name = "rillsy-fast-start"
version = "0.1.0"
description = "Rillsy NoneBot 快速启动合集"
authors = ["GuaiZai <gz.guaitech.org>"]
license = { text = "GPL-3.0" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["nonebot", "rillsy", "plugin"]

[project.dependencies]
aiohttp = "==3.12.15"
feedparser = "==6.0.11"
html2text = "==2025.4.15"
httpx = "==0.28.1"
nonebot = "==1.9.1"
Pillow = "==11.3.0"
pydantic = "==2.11.7"
requests = "==2.32.5"

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"